graph alignment fixed

--- a/tiv-app/src/styles/custom.scss
+++ b/tiv-app/src/styles/custom.scss
@@ -456,4 +456,5 @@
 
 .market-view-height {
   max-width: 800px;
+  margin: 0 auto;
 }
